@@ -1,3 +1,4 @@
+1.1.40-0 @02/13/2007 21:40:00 UTC@
 1.1.39-0 @01/30/2007 22:30:00 UTC@
 1.1.38-0 @12/13/2006 16:50:00 UTC@
 1.1.37-0 @12/11/2006 15:50:00 UTC@
